<resources>
    <string name="app_name">Moviles1FelixJV</string>
    <string name="videosjuegos">VIDEOSJUEGOS</string>
    <string name="DERECHA"><![CDATA[>]]></string>
    <string name="IZQUIERDA"><![CDATA[<]]></string>
    <string name="nombre">Nombre</string>
    <string name="g_nero">Género</string>
    <string name="puntuaci_n">Puntuación</string>
    <string name="comentarios">Comentarios</string>
    <string name="lo_recomiendo">Lo Recomiendo</string>
    <string name="no_lo_recomiendo">No lo Recomiendo</string>
    <string name="lo_recomendar_as">Lo Recomendarías?</string>
    <string name="buttonderecha"><![CDATA[>]]></string>
    <string name="buttonizquierda"><![CDATA[<]]></string>
    <string name="nombreland">Nombre</string>
    <string name="generoland">Género</string>
    <string name="puntuacion">Puntuación</string>
    <string name="comentariosland">Comentarios</string>
    <string name="lo_recomiendoland">Lo Recomiendo</string>
    <string name="no_lo_recomiendoland">No lo Recomiendo</string>
    <string name="lo_recomendarias">Lo Recomendarías?</string>
    <string name="button">Button</string>
    <string name="buttonSubmit">ButtonSubmit\n</string>
    <string name="videosjuegosLand">VIDEOSJUEGOS</string>
    <string name="nameLand">Name</string>
    <string name="anyadir">+</string>
    <string name="eliminar">-</string>
    <string name="update">Update</string>
    <string name="_0">0</string>
    <string name="separador">/</string>
    <string name="nombreItemLista">nombre</string>
    <string name="apellidositemlista">apellidosItemLista</string>
    <string name="videojuego">Videojuego</string>
    <string name="ir">IR</string>
    <string name="anyadirLista">anyadir</string>
    <string name="a_adir_videojuego">Añadir videojuego</string>
    <string name="todo">img\n</string>
    <string name="LOGIN">LOGIN</string>
    <string name="Login">Login</string>
    <string name="id">id</string>
    <string name="username">username</string>
    <string name="titulo">titulo</string>
    <string name="FOTO">FOTO</string>
</resources>